--- a/rate.tex
+++ b/rate.tex
@@ -16,7 +16,7 @@ ratings are used to choose the groups; players are grouped with other players
 of a similar level.
 
 We assume that the large majority of players are amateur, without any prior
-ping pong rating and not competing nationally or otherwise outside of the
+ping pong rating and not competing nationally nor otherwise outside of the
 local league. In total we expect not more than a few hundred distinct players
 to ever participate in the league. Individual players will play around four
 matches a month, and there will not be more than around one hundred players
@@ -53,7 +53,7 @@ ratings for each player so that, given any two players $i$ and $j$ with
 ratings $x_i$ and $x_j$, the probability that player $i$ beats player $j$ in a
 match is:
 \begin{equation}
-  f(x_i, x_j) = \frac{1}{1 + e^{-k(x_i - x_j)}}
+  f(x_i, x_j) = \frac{1}{1 + e^{-\kappa(x_i - x_j)}}
 \end{equation}
 
 \begin{figure}
@@ -88,12 +88,10 @@ particular:
   \item More generally, the probability of player $i$ losing against player
     $j$ is the same as the probability of player $j$ winning against player
     $i$:
-    \begin{align}
-      1 - f(x_i, x_j) &= 1 - \frac{1}{1 + e^{-k(x_i - x_j)}} & \\
-                      &= \frac{(1 + e^{-k(x_i - x_j)}) - 1}{1 + e^{-k(x_i - x_j)}} & \\
-                      &= \frac{e^{-k(x_i - x_j)}}{1 + e^{-k(x_i - x_j)}} & \\
-                      &= \frac{1}{e^{k(x_i - x_j)} + 1} &= f(x_j, x_i) \\
-    \end{align}
+    \begin{align*}
+      1 - f(x_i, x_j) &= 1 - \frac{1}{1 + e^{-\kappa(x_i - x_j)}} = \frac{(1 + e^{-\kappa(x_i - x_j)}) - 1}{1 + e^{-\kappa(x_i - x_j)}} \\
+                      &= \frac{e^{-\kappa(x_i - x_j)}}{1 + e^{-\kappa(x_i - x_j)}} = \frac{1}{e^{\kappa(x_i - x_j)} + 1} = f(x_j, x_i)
+    \end{align*}
 
   \item The greater the rating $x_i$ of player $i$ is relative to the rating
     $x_j$ of player $j$, the more likely player $i$ is of beating player $j$.
@@ -102,35 +100,35 @@ particular:
 
   \item If player $i$ is rated significantly higher than player $j$, player
     $i$ will beat player $j$ with almost certainty.
-    \begin{equation}
+    \begin{equation*}
       \lim_{x_i \to \infty} f(x_i, x_j) = \frac{1}{1 + e^{-\infty}} = 1
-    \end{equation}
+    \end{equation*}
 \end{itemize}
 
 Note that the probability of a player winning a match against another player
 depends only on the players' relative ratings, not the absolute value of their
 ratings. We could, if we like, shift all of the ratings by any constant $c$
 without impacting the likely match outcomes:
-\begin{equation}
+\begin{equation*}
   f(x_i - c, x_j - c) =
-  \frac{1}{1 + e^{-k(x_i - c - x_j + c)}} =
-  \frac{1}{1 + e^{-k(x_i - x_j)}} = f(x_i, x_j)
-\end{equation}
+  \frac{1}{1 + e^{-\kappa(x_i - c - x_j + c)}} =
+  \frac{1}{1 + e^{-\kappa(x_i - x_j)}} = f(x_i, x_j)
+\end{equation*}
 
 We will take advantage of this fact later to assign a particular absolute
 rating to the average player.
 
 We can scale the ratings by some constant factor $a$ without impacting the
-likely match outcomes as long as we scale the factor $k$ used in the
+likely match outcomes as long as we scale the factor $\kappa$ used in the
 logistics function appropriately:
-\begin{equation}
-  f_k(a x_i, a x_j) =
-  \frac{1}{1 + e^{-k(a x_i - a x_j)}} =
-  \frac{1}{1 + e^{-ak(x_i - x_j)}} = f_{ak}(x_i, x_j)
-\end{equation}
+\begin{equation*}
+  f_\kappa(a x_i, a x_j) =
+  \frac{1}{1 + e^{-\kappa(a x_i - a x_j)}} =
+  \frac{1}{1 + e^{-a \kappa(x_i - x_j)}} = f_{a \kappa}(x_i, x_j)
+\end{equation*}
 
 In particular, if we choose to scale up the ratings by some constant factor
-$a$, we need to scale down the factor $k$ in the logistics function to get the
+$a$, we need to scale down the factor $\kappa$ in the logistics function to get the
 same likely match outcomes.
 
 \section{Normal Distribution of Ratings}
@@ -138,9 +136,9 @@ same likely match outcomes.
   \caption{A normal distribution}
   \label{fig:normal}
  \begin{tikzpicture}
-   \begin{axis}[grid=major, xmin=-5, xmax=5, axis x line=bottom,
-         xtick={0}, ytick={0,1}, ymax=1, axis y line=middle,
-         xticklabels={},
+   \begin{axis}[grid=none, xmin=-5, xmax=5,
+         xtick={}, ytick={}, ymax=0.5,
+         xticklabels={}, yticklabels={},
          width=\textwidth, height=\axisdefaultheight, 
          xlabel={$x_i$}, ylabel={$g(x_i)$},
        ]
@@ -158,7 +156,7 @@ they played. The best choice for $x_i$ and $x_j$ that makes $f(x_i, x_j) = 1$
 is to set $x_i$ and $x_j$ as far apart as possible. In other words,
 $x_i = \infty$ and $x_j = -\infty$. But this is absurd. Surely player $i$
 isn't an infinitely good player because he won a single match against player
-$j$. It probably wouldn't be hard to find some other player $k$ who can beat
+$j$. It probably wouldn't be hard to find some other player $\kappa$ who can beat
 player $j$, meaning our estimate of $x_i = \infty$ is not very good.
 
 More realistically, player ratings will tend to be independently and
@@ -168,7 +166,7 @@ find the distribution of ratings for all players to follow a normal
 distribution, such as the one pictured in figure \ref{fig:normal}. The
 probability of a player $i$ having a rating $x_i$ is:
 \begin{equation}
-  g(x_i) = \frac{e^{\frac{-(x_i - \mu)^2}{2 \sigma^2}}}{\sqrt{2\pi\sigma^2}}
+  g(x_i) = \frac{1}{\sqrt{2\pi\sigma^2}} e^{\frac{-(x_i - \mu)^2}{2 \sigma^2}}
 \end{equation}
 
 Where $\mu$ is the mean player rating and $\sigma^2$ is the variance in player
@@ -186,147 +184,136 @@ arbitrary constant $c$ without effecting the likely match outcomes, so we can
 choose $\mu$ to be whatever we like. For simplicity to start, we'll choose
 $\mu = 0$. We are also allowed to scale player ratings by an arbitrary factor
 $a$, so we have the option to choose any value for $\sigma^2$ that we like,
-but only if we also adjust the $k$ factor in the logistics function
-appropriately. While we are free to pick either one of $\sigma^2$ or $k$ to be
-whatever we like, the product $\sigma^2 k^2$ must remain fixed.
+but only if we also adjust the $\kappa$ factor in the logistics function
+appropriately. While we are free to pick either one of $\sigma^2$ or $\kappa$ to be
+whatever we like, the product $\sigma^2 \kappa^2$ must remain fixed.
 
-The constant $S = \sigma^2 k^2$ is an intrinsic property of the world,
+The constant $S = \sigma^2 \kappa^2$ is an intrinsic property of the world,
 representing how large the range of ping pong player skill levels is. For now
-we will leave the logistics function and normal distribution generic in $k$
+we will leave the logistics function and normal distribution generic in $\kappa$
 and $\sigma^2$ rather than worry about how to determine the constant $S$.
 
 \section{Raw Rating Definition}
 Players' ratings are chosen to be those ratings that maximize the likehood of
 the observed match results and player ratings. Assuming a set of players
-$i \in \mathbb{P}$ and (possibly duplicate) match results
-$(i, j) \in \mathbb{M}$, where $(i, j)$ means the player $i$ beat the player
+$i \in P$ and (possibly duplicate) match results
+$(i, j) \in M$, where $(i, j)$ means the player $i$ beat the player
 $j$ in a single match, we choose $x_i$ to maximize:
 \begin{equation}
-  L(x, \mathbb{P}, \mathbb{M}) = \prod_{i \in \mathbb{P}} g(x_i)  \prod_{(i, j) \in \mathbb{M}} f(x_i, x_j)
+  L(x, P, M) = \prod_{i \in P} g(x_i)  \prod_{(i, j) \in M} f(x_i, x_j)
 \end{equation}
 
-To solve for the values of $x_i$ that maximize $L(x, \mathbb{P}, \mathbb{M})$,
+To solve for the values of $x_i$ that maximize $L(x, P, M)$,
 we take partial derivitives of $L$ and set them equal to $0$. For a particular
 $x_k$ we have:
 
-\begin{equation}
-  \frac{\partial}{\partial x_k} \prod_{i \in \mathbb{P}} g(x_i)  \prod_{(i, j) \in \mathbb{M}} f(x_i, x_j) = 0
-\end{equation}
+\begin{equation*}
+  \frac{\partial}{\partial x_k} \left[ \prod_{i \in P} g(x_i)  \prod_{(i, j) \in M} f(x_i, x_j) \right] = 0
+\end{equation*}
 
 Pulling out the factors that don't depend on $x_k$, we have:
-\begin{equation}
-  \prod_{i \in \mathbb{P}, i \ne k} g(x_i)
-  \prod_{(i, j) \in \mathbb{M}, i \ne k, j \ne k} f(x_i, x_j)
-  \frac{\partial}{\partial x_k} g(x_j)
-      \prod_{(k, j) \in \mathbb{M}} f(x_k, x_j)
-      \prod_{(j, k) \in \mathbb{M}} f(x_j, x_k)
-      = 0
-\end{equation}
-
-The interesting part is when the partial derivitive is zero:
 \begin{equation} \label{eq:partialproduct}
-  \frac{\partial}{\partial x_k} g(x_j)
-      \prod_{(k, j) \in \mathbb{M}} f(x_k, x_j)
-      \prod_{(j, k) \in \mathbb{M}} f(x_j, x_k)
+  \frac{\partial}{\partial x_k} \left[ g(x_k)
+      \prod_{(k, j) \in M} f(x_k, x_j)
+    \prod_{(j, k) \in M} f(x_j, x_k) \right]
       = 0
 \end{equation}
 
 This equation takes the form
-\begin{equation}
+\begin{equation*}
   \frac{d}{dx}[a(x) b(x) c(x) \cdots] = 0
-\end{equation}
+\end{equation*}
 
 By the product rule this is:
-\begin{equation}
+\begin{equation*}
     a'(x) b(x) c(x) \cdots
   + a(x) b'(x) c(x) \cdots
-  + a(x) b(x) c'(x) \cdots + \ldots = 0
-\end{equation}
+  + a(x) b(x) c'(x) \cdots + \cdots = 0
+\end{equation*}
 
 Factoring out the common product:
-\begin{equation}
-  a(x) b(x) c(x) \cdots (
+\begin{equation*}
+  (a(x) b(x) c(x) \cdots) (
       \frac{a'(x)}{a(x)}
     + \frac{b'(x)}{b(x)}
     + \frac{c'(x)}{c(x)}
-    + \ldots) = 0
-\end{equation}
+    + \cdots) = 0
+\end{equation*}
 
 Assuming none of $a(x)$, $b(x)$, $c(x)$, $\ldots$ are 0 in the region of
 interest, this reduces to:
-\begin{equation}
+\begin{equation*}
       \frac{a'(x)}{a(x)}
     + \frac{b'(x)}{b(x)}
     + \frac{c'(x)}{c(x)}
     + \ldots = 0
-\end{equation}
+\end{equation*}
 
 In equation \ref{eq:partialproduct}, there are three types of terms: $g(x_k)$, 
 $f(x_k, x_j)$, and $f(x_j, x_k)$. Let's consider each in turn.
 
-\begin{equation}
-  g'(x_k) = \frac{d}{d x_k} [\frac{e^{\frac{-x_k^2}{\sigma^2}}}{\sqrt{2\pi\sigma^2}}]
-  = \frac{e^{\frac{-(x_k - \mu)^2}{\sigma^2}}}{\sqrt{2\pi\sigma^2}}
-  (-2 \frac{x_k}{2 \sigma^2})
-    = -g(x_k)\frac{x_k}{\sigma^2}
-\end{equation}
-\begin{equation}
+\begin{equation*}
+  g'(x_k) = \frac{d}{d x_k} \left[ \frac{1}{\sqrt{2\pi\sigma^2}} e^{\frac{-x_k^2}{\sigma^2}} \right]
+  = (-\frac{2 x_k}{2 \sigma^2}) \frac{1}{\sqrt{2\pi\sigma^2}} e^{\frac{-(x_k - \mu)^2}{\sigma^2}}
+    = -\frac{x_k}{\sigma^2} g(x_k)
+  \end{equation*}
+\begin{equation*}
   \frac{g'(x_k)}{g(x_k)} = -\frac{x_k}{\sigma^2}
-\end{equation}
+\end{equation*}
 
-\begin{equation}
-  f'(x_k, x_j) = \frac{\partial}{\partial x_k} [\frac{1}{1 + e^{-k(x_i - x_j)}}]
-  = \frac{k e^{-k(x_k - x_j)}}{(1 + e^{-k(x_k - x_j)})^2}
-  = \frac{k e^{-k(x_k - x_j)}}{1 + e^{-k(x_k - x_j)}} f(x_k, x_j)
-\end{equation}
-\begin{equation}
+\begin{align*}
+  f'(x_k, x_j) &= \frac{\partial}{\partial x_k} \left[\frac{1}{1 + e^{-\kappa(x_i - x_j)}}\right] \\
+               &= \frac{\kappa e^{-\kappa(x_k - x_j)}}{(1 + e^{-\kappa(x_k - x_j)})^2}
+  = \frac{\kappa e^{-\kappa(x_k - x_j)}}{1 + e^{-\kappa(x_k - x_j)}} f(x_k, x_j)
+\end{align*}
+\begin{equation*}
   \frac{f'(x_k, x_j)}{f(x_k, x_j)}
-  = \frac{k e^{-k(x_k - x_j)}}{1 + e^{-k(x_k - x_j)}}
-  = \frac{k}{e^{k(x_k - x_j)} + 1} = k f(x_j, x_k)
-\end{equation}
+  = \frac{\kappa e^{-\kappa(x_k - x_j)}}{1 + e^{-\kappa(x_k - x_j)}}
+  = \frac{\kappa}{e^{\kappa(x_k - x_j)} + 1} = \kappa f(x_j, x_k)
+\end{equation*}
 
 The case for $f(x_j, x_k)$ is the same as $f(x_k, x_j)$ with the opposite
 sign.
 
-Combining all of these together, we have:
-\begin{equation}
+Combining all of these together, we have from equation \ref{eq:partialproduct}:
+\begin{equation*}
   - \frac{x_k}{\sigma^2}
-  + \sum_{(k, j) \in \mathbb{M}} k f(x_j, x_k)
-  - \sum_{(j, k) \in \mathbb{M}} k f(x_k, x_j) = 0
-\end{equation}
+  + \sum_{(k, j) \in M} \kappa f(x_j, x_k)
+  - \sum_{(j, k) \in M} \kappa f(x_k, x_j) = 0
+\end{equation*}
 
 Because we know $f(x_j, x_k) = 1 - f(x_k, x_j)$, we can reorganize the sum:
-\begin{equation}
-  - \frac{x_k}{\sigma^2}
-  + \sum_{(k, j) \in \mathbb{M}} k (1 - f(x_k, x_h))
-  - \sum_{(j, k) \in \mathbb{M}} k f(x_k, x_j)
-= - \frac{x_k}{\sigma^2}
-  + k \sum_{(k, j) \in \mathbb{M}} 1
-  - k (\sum_{(j, k) \in \mathbb{M}} f(x_k, x_j) + \sum_{(k, j) \in \mathbb{M}} f(x_k, x_j)) 
-\end{equation}
+\begin{align*}
+  &- \frac{x_k}{\sigma^2}
+  + \sum_{(k, j) \in M} \kappa (1 - f(x_k, x_h))
+  - \sum_{(j, k) \in M} \kappa f(x_k, x_j) \\
+  = &- \frac{x_k}{\sigma^2}
+  + \kappa \sum_{(k, j) \in M} 1
+  - \kappa \left(\sum_{(j, k) \in M} f(x_k, x_j) + \sum_{(k, j) \in M} f(x_k, x_j)\right) 
+\end{align*}
 
 If we let $W_k$ be the total number of matches won by player $k$, and $M_{k,j}$
 be the total number of matches played between player $k$ and player $j$, then
 the equation becomes:
-\begin{equation}
-  - \frac{x_k}{\sigma^2} + k W_k - k \sum_{j \in \mathbb{P}} M_{k,j} f(x_k, x_j) = 0
-\end{equation}
+\begin{equation*}
+  - \frac{x_k}{\sigma^2} + \kappa W_k - \kappa \sum_{j \in P} M_{k,j} f(x_k, x_j) = 0
+\end{equation*}
 
-Dividing by the product $k M_k$, where $M_k$ is the total number of matches
+Dividing by the product $M_k \kappa$, where $M_k$ is the total number of matches
 played by player $k$, we have:
-\begin{equation}
-  - \frac{x_k}{k M_k \sigma^2} + w_k - \sum_{j \in \mathbb{P}} m_{k, j} f(x_k, x_j) = 0
-\end{equation}
+\begin{equation*}
+  - \frac{x_k}{M_k \kappa \sigma^2} + w_k - \sum_{j \in P} m_{k, j} f(x_k, x_j) = 0
+\end{equation*}
 
 Where $w_k$ is the fraction of matches played by player $k$ that player $k$
-won, and $m_{k, i}$ is the fraction of matches played by player $k$ against
-player $i$. Rearranging, we get:
+won, and $m_{k, j}$ is the fraction of matches played by player $k$ against
+player $j$. Rearranging, we get:
 \begin{equation}
-  w_k = \frac{x_k}{k M_k \sigma^2} + \sum_{j \in \mathbb{P}} m_{k, j} f(x_k, x_j)
+  w_k = \frac{x_k}{M_k \kappa \sigma^2} + \sum_{j \in P} m_{k, j} f(x_k, x_j)
 \end{equation}
 
 We can interpret this equation as saying we want to choose $x_k$ so that the
-observed fraction of matches won by player, $w_k$ is the weighted sum of the
+observed fraction of matches won by player $k$, $w_k$, is the weighted sum of the
 win fraction predicted by the logistics function plus an additional error term
 to correct for observed results that arise from the player not having played
 many matches. The more matches the player plays, the smaller this additional
@@ -338,23 +325,22 @@ solution to this equation by minimizing the squared difference of both sides
 of the equation. We can approximate the solution for all players by minimizing
 the sum of the squared differences for every player:
 
-\begin{equation}
-  (w_0 - (\frac{x_k}{k M_0 \sigma^2} + \sum_{j \in \mathbb{P}} m_{0, j} f(x_0, x_j)))^2
-+ (w_1 - (\frac{x_k}{k M_1 \sigma^2} + \sum_{j \in \mathbb{P}} m_{1, j} f(x_1, x_j)))^2
-+ (w_2 - (\frac{x_k}{k M_2 \sigma^2} + \sum_{j \in \mathbb{P}} m_{2, j} f(x_2, x_j)))^2
-+ \ldots
-\end{equation}
+\begin{align*}
+    &(w_0 - (\frac{x_0}{M_0 \kappa \sigma^2} + \sum_{j \in P} m_{0, j} f(x_0, x_j)))^2 \\
+  + &(w_1 - (\frac{x_1}{M_1 \kappa \sigma^2} + \sum_{j \in P} m_{1, j} f(x_1, x_j)))^2 \\
+  + &(w_2 - (\frac{x_2}{M_2 \kappa \sigma^2} + \sum_{j \in P} m_{2, j} f(x_2, x_j)))^2 + \ldots
+\end{align*}
 
 For example, this expression can be efficiently minimized using the
 Fletcher-Reeves conjugate gradient algorithm as implemented in the GNU
 Scientific Library's gsl\_multimin\_fdfminimizer\_conjugate\_fr.
 
 Notice that as the number of matches each player has played goes up, the
-parameters $k$ and $\sigma^2$ make less and less of a difference in the
-estimated player ratings. Given that is the case, we will simply take $k = 1$
-and $\sigma^2 = 1$, which gives $S = k^2 \sigma^2 = 1$\footnote{Statistics
-compiled on the distribution of USATT ratings suggest $S$ is somewhere between
-1 and 100 in practice.}
+parameters $\kappa$ and $\sigma^2$ make less and less of a difference in the
+estimated player ratings. Given that is the case, we will simply take $\kappa = 1$
+and $\sigma^2 = 1$, which gives $S = \kappa^2 \sigma^2 = 1$ as the intrinsic
+constant\footnote{Statistics compiled on the distribution of USATT ratings
+  suggest $S$ is somewhere between 1 and 100 in practice.}.
 
 \section{Normalized Ratings}
 The raw ratings described in the previous section are good for rank ordering
