Use 'they' instead of 'he' pronoun.
Ping pong is open to all, don't suggest otherwise.

--- a/rate.tex
+++ b/rate.tex
@@ -155,7 +155,7 @@ We have observed that player $i$ beat player $j$ in $100\%$ of the matches
 they played. The best choice for $x_i$ and $x_j$ that makes $f(x_i, x_j) = 1$
 is to set $x_i$ and $x_j$ as far apart as possible. In other words,
 $x_i = \infty$ and $x_j = -\infty$. But this is absurd. Surely player $i$
-isn't an infinitely good player because he won a single match against player
+isn't an infinitely good player because they won a single match against player
 $j$. It probably wouldn't be hard to find some other player $\kappa$ who can beat
 player $j$, meaning our estimate of $x_i = \infty$ is not very good.
 
