Minor fixes in text.

--- a/pingpong-rating-system.tex
+++ b/pingpong-rating-system.tex
@@ -128,8 +128,8 @@ logistics function appropriately:
 \end{equation*}
 
 In particular, if we choose to scale up the ratings by some constant factor
-$a$, we need to scale down the factor $\kappa$ in the logistics function to get the
-same likely match outcomes.
+$a$, we need to scale down the factor $\kappa$ in the logistics function to
+get the same likely match outcomes.
 
 \section{Normal Distribution of Ratings}
 \begin{figure}
