Fix bug with uninitialized memory.
Also:
* Upgrade generate.py to work with python 3
* Check in m2.txt which showed the uninitialized memory bug.

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,5 +6,4 @@
 * Add a man page and/or help usage text for pingpong-rating-system program.
 * Add a test suite?
 
-* Figure out why valgrind things we use uinitialized values.
- - cleanup allocation of the match history data structure?
+* Double check valgrind errors are gone now.
